[workspace]
# Empty workspace to make this separate from `ion-cli`

[package]
name = "code-gen-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ion-rs = {version = "1.0.0-rc.2", features = ["experimental"]}